src/test/ui/borrowck/borrowck-while.stderr
error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-while.rs:4:12
   |
LL |     return x;
   |            ^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
